@@ -6,31 +6,29 @@ our $VERSION = '0.01';
 
 =head1 Name
 
-SPVM::File::Temp - Short Description
+SPVM::File::Temp - Creating Temporary Files and Directories
 
 =head1 Description
 
-C<SPVM::File::Temp> is the C<File::Temp> class in L<SPVM> language.
+The File::Temp class of L<SPVM> has methods to create temporary files and directories.
 
 =head1 Usage
 
   use File::Temp;
-
-=head1 Fields
-
-
+  
+  my $tmp_dir = File::Temp->newdir;
 
 =head1 Class Methods
 
+=head2 newdir
 
+  static method newdir : File::Temp::Dir ()  {
 
-=head1 Instance Methods
-
-
+Creates a temporary directory and returns a L<File::Temp::Dir|SPVM::File::Temp::Dir> object.
 
 =head1 Repository
 
-
+L<SPVM::File::Temp - Github|https://github.com/yuki-kimoto/SPVM-File-Temp>
 
 =head1 Author
 
@@ -38,8 +36,6 @@ Yuki Kimoto C<kimoto.yuki@gmail.com>
 
 =head1 Copyright & License
 
-Copyright 2023-2023 Yuki Kimoto, all rights reserved.
+Copyright (c) 2023 Yuki Kimoto
 
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
+MIT License
