@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class File::Temp {
   use File::Temp::Dir;
   use Hash;
