@@ -1,0 +1,17 @@
+package SPVM::File::Temp::Dir;
+
+1;
+
+=head1 Name
+
+SPVM::File::Temp::Dir - Creating Temporary Files and Directories
+
+=head1 Description
+
+The File::Temp::Dir class of L<SPVM> has methods to create temporary directories.
+
+=head1 Copyright & License
+
+Copyright (c) 2023 Yuki Kimoto
+
+MIT License
