@@ -1,6 +1,8 @@
 0.03 2023-05-23
   [Prerequirement Changes]
     * SPVM::Sys 0.481001 is required.
+  [License Change]
+    * The license is changed to MIT License.
 0.02 2023-02-21
   [Changes]
     * First release.
